# huawei-smt-2022

./: CMakeLists.txt  README.md
include/: AntisymmetryException.h  FinOrdSolver.h
src/: FinOrdSolver.cpp  main.cpp
